--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,18 +1,12 @@
 /* body style */
 
-/* body {
-  width: 1140px;
-  background-color: #fff;
-  margin: 0 auto;
-} */
-
 .open-sans-normal {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   font-variation-settings: "wdth" 100;
 }
-/* Shared style */
+/* Shared styles */
 
 .text-primary {
   color: #fd6e0a;
@@ -29,8 +23,15 @@
   background-color: #fd6e0a;
   padding: 18px 35px;
   border-radius: 5px;
-}
 
+  /* NEW LEARNING */
+  border: none;
+}
+.header {
+  background: url(../images/developer.png), url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+}
 /* Nav style */
 
 nav {
@@ -51,10 +52,31 @@ nav ul {
 
 nav ul li {
   font-size: 1.5em;
-  margin: 50px;
+  margin-right: 50px;
 }
 
 nav ul li a {
   font-size: 20px;
   text-decoration: none;
+}
+.banner {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 38px 0 170px;
+}
+.banner-greetings {
+  font-size: 45px;
+  font-weight: 600px;
+}
+
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+  color: #181818;
+}
+
+.banner-description {
+  font-size: 18px;
+  font-weight: regular;
+  color: #757575;
 }
