--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,3 +1,7 @@
+/* * {
+  margin: 0;
+  padding: 0;
+} */
 /* body style */
 
 .open-sans-normal {
@@ -6,8 +10,10 @@
   font-style: normal;
   font-variation-settings: "wdth" 100;
 }
-/* Shared styles */
-
+/* Shared styles start */
+.secondary-bg {
+  color: #fff8f3 !important;
+}
 .text-primary {
   color: #fd6e0a;
 }
@@ -27,6 +33,12 @@
   /* NEW LEARNING */
   border: none;
 }
+.section-title {
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+}
+/* Shared styles end */
 .header {
   background: url(../images/developer.png), url("../images/header_bg.png");
   background-repeat: no-repeat;
@@ -59,6 +71,8 @@ nav ul li a {
   font-size: 20px;
   text-decoration: none;
 }
+
+/* Banner style */
 .banner {
   display: flex;
   justify-content: space-between;
@@ -67,15 +81,36 @@ nav ul li a {
 .banner-greetings {
   font-size: 45px;
   font-weight: 600px;
+  margin-bottom: 0;
 }
 
 .banner-title {
   font-size: 85px;
   font-weight: 700;
   color: #181818;
+  margin-bottom: 0;
 }
 
 .banner-description {
+  font-size: 18px;
+  font-weight: regular;
+  color: #757575;
+  margin-bottom: 0;
+}
+
+/* main style */
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.section-title {
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+}
+
+.section-description {
   font-size: 18px;
   font-weight: regular;
   color: #757575;
