--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,9 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-} */
-/* body style */
-
 .open-sans-normal {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
@@ -12,12 +6,15 @@
 }
 /* Shared styles start */
 .secondary-bg {
-  color: #fff8f3 !important;
+  background-color: #fff8f3;
 }
+
 .text-primary {
   color: #fd6e0a;
 }
-
+.text-center {
+  text-align: center;
+}
 .dark-2 {
   color: #474747;
 }
@@ -29,23 +26,17 @@
   background-color: #fd6e0a;
   padding: 18px 35px;
   border-radius: 5px;
-
-  /* NEW LEARNING */
   border: none;
 }
-.section-title {
-  font-size: 35px;
-  font-weight: bold;
-  color: #181818;
-}
 /* Shared styles end */
+
 .header {
   background: url(../images/developer.png), url("../images/header_bg.png");
   background-repeat: no-repeat;
   background-position: top left, bottom right;
 }
-/* Nav style */
 
+/* Nav style */
 nav {
   display: flex;
   justify-content: space-between;
@@ -61,12 +52,10 @@ nav ul {
   align-items: center;
   list-style: none;
 }
-
 nav ul li {
   font-size: 1.5em;
   margin-right: 50px;
 }
-
 nav ul li a {
   font-size: 20px;
   text-decoration: none;
@@ -76,34 +65,48 @@ nav ul li a {
 .banner {
   display: flex;
   justify-content: space-between;
-  margin: 0 38px 0 170px;
+  margin: 0 38px 0 200px;
+}
+.banner-content {
+  max-width: 580px;
 }
 .banner-greetings {
   font-size: 45px;
   font-weight: 600px;
   margin-bottom: 0;
 }
-
 .banner-title {
   font-size: 85px;
   font-weight: 700;
   color: #181818;
   margin-bottom: 0;
 }
-
 .banner-description {
   font-size: 18px;
   font-weight: regular;
   color: #757575;
   margin-bottom: 0;
 }
-
+.banner-profile-pic {
+  width: 580px;
+}
 /* main style */
 main {
   max-width: 1140px;
   margin: 0 auto;
 }
 
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+/* About styles */
+
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  margin-top: 130px;
+}
 .section-title {
   font-size: 35px;
   font-weight: bold;
@@ -114,4 +117,20 @@ main {
   font-size: 18px;
   font-weight: regular;
   color: #757575;
+}
+
+.about-items {
+  display: flex;
+  justify-content: space-around;
+}
+
+.skill-container {
+  display: flex;
+  gap: 24px;
+}
+
+.skill {
+  padding: 30px;
+  box-shadow: 0px 6px 50px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
